--- a/finalStyles.css
+++ b/finalStyles.css
@@ -1,11 +1,17 @@
 body{
 	background-color: #B689FF;
-	}
+}
 h1{
 	color: black;
 	text-align: center;
 	font-family: 'Brush Script MT', cursive;
-	}
+}
 .summary{
 	text-align: center;
-	}
+}
+h2{
+	font-family: 'Brush Script MT', cursive;
+}
+h3{
+	font-family: 'Brush Script MT', cursive;
+}
