--- a/finalStyles.css
+++ b/finalStyles.css
@@ -1,5 +1,6 @@
 body{
 	background-color: #B689FF;
+	font-family: Garamond, serif;
 }
 h1{
 	color: black;
@@ -20,5 +21,8 @@ h4{
 	font-family: 'Brush Script MT', cursive;
 }
 p{
-	font-family: Garamond, serif;
+	
+}
+.nav{
+	text-align: center;
 }
