--- a/finalStyles.css
+++ b/finalStyles.css
@@ -18,7 +18,7 @@ h3{
 	font-family: 'Brush Script MT', cursive;
 }
 h4{
-	font-family: 'Brush Script MT', cursive;
+	font-family: 'Lucida Handwriting', cursive;
 }
 p{
 	
