--- a/finalStyles.css
+++ b/finalStyles.css
@@ -33,7 +33,12 @@ p{
 	font-family: 'Lucida Handwriting', cursive;
 	text-align: center;
 }
+
 .nav{
 	text-align: center;
 	font-size: 30px;
+}
+
+.statement{
+	color: black;
 }
